# debug-tools

./: CMakeLists.txt  README.MD  README.md  hello-tp.h  hello.c
include/tracer/: hello-tp.h
scripts/: analyze.py  install.sh  setup.bash  trace.sh
src/: hello-tp.c  hello.c
test/: CMakeLists.txt  main.c
